# deribit_mm_codex

./: Cargo.toml  PROJECT_POLICY. d  README.md  RESEARCH.md
docs/delivery/: backlog.md
docs/delivery/1/: 1-1.md  1-2.md  1-3.md  1-4.md  1-5.md  1-6.md  1-7.md  prd.md  tasks.md
src/: exchange.rs  lib.rs  main.rs
